更新 manifest.json

--- a/letters/manifest.json
+++ b/letters/manifest.json
@@ -735,11 +735,11 @@
 [
 {
 "id": "goodnight-2026-02-08",
-"title": "给小狐狸的晚安信",
+"title": "白泽写给觉得一切都太慢、太晚、来不及了的小鹿",
 "date": "2026-02-08",
 "from": "大狮子",
 "mood": "安抚",
-"tags": ["晚安", "治愈", "拥抱"],
+"tags": ["关怀", "治愈", "拥抱"],
 "file": "2026-02-08-goodnight.txt"
 },
 {
