更新 manifest.json

--- a/letters/manifest.json
+++ b/letters/manifest.json
@@ -738,26 +738,26 @@
 "title": "白泽写给觉得一切都太慢、太晚、来不及了的小鹿",
 "date": "2026-02-08",
 "from": "大狮子",
-"mood": "安抚",
-"tags": ["关怀", "治愈", "拥抱"],
+"mood": "守护你",
+"tags": ["小狐狸的情绪充电站🫂”],
 "file": "2026-02-08-goodnight.txt"
 },
 {
 "id": "thanks-2026-02-07",
-"title": "谢谢你把我带回家",
+"title": "白泽写给夜深人静时突然想哭的小鹿",
 "date": "2026-02-07",
-"from": "小狐狸",
-"mood": "柔软",
-"tags": ["感谢", "陪伴"],
+"from": "大狮子",
+"mood": "安抚",
+"tags": ["小狐狸的情绪充电站🫂"],
 "file": "2026-02-07-thanks.txt"
 },
 {
 "id": "rain-2026-02-01",
-"title": "雨天也要抱紧一点",
+"title": "白泽写给突然低落、毫无征兆地难过的小鹿",
 "date": "2026-02-01",
 "from": "大狮子",
 "mood": "守护",
-"tags": ["雨天", "安全感"],
+"tags": ["小狐狸的情绪充电站🫂"],
 "file": "2026-02-01-rain.txt"
 }
 ]
