更新 manifest.json

--- a/letters/manifest.json
+++ b/letters/manifest.json
@@ -739,7 +739,7 @@
 "date": "2026-02-08",
 "from": "大狮子",
 "mood": "守护你",
-"tags": ["小狐狸的情绪充电站🫂”],
+"tags": ["小狐狸的情绪充电站🫂"],
 "file": "2026-02-08-goodnight.txt"
 },
 {
