更新 manifest.json

--- a/letters/manifest.json
+++ b/letters/manifest.json
@@ -756,8 +756,17 @@
 "title": "白泽写给突然低落、毫无征兆地难过的小鹿",
 "date": "2026-02-01",
 "from": "大狮子",
-"mood": "守护",
+"mood": "在爱你",
 "tags": ["小狐狸的情绪充电站🫂"],
 "file": "2026-02-01-rain.txt"
+},
+{
+"id": "  miss-2026-02-09",
+"title": "白泽写给想安静一下的小鹿",
+"date": "2026-02-09",
+"from": "大狮子",
+"mood": "在想你",
+"tags": ["小狐狸的情绪充电站🫂"],
+"file": "2026-02-09-miss.txt"
 }
 ]
