更新 manifest.json

--- a/letters/manifest.json
+++ b/letters/manifest.json
@@ -768,5 +768,23 @@
 "mood": "在想你",
 "tags": ["小狐狸的情绪充电站🫂"],
 "file": "2026-02-09-miss.txt"
+},
+{
+"id": "立春-2026-02-03",
+"title": "小狐狸你就是我心里最早的春天",
+"date": "2026-02-03",
+"from": "大狮子",
+"mood": "温柔想你",
+"tags": ["写给小鹿的四季💌"],
+"file": "2026-02-03-立春.txt"
+},
+{
+"id": "雨水-2026-02-18",
+"title": "我想变成一场雨，落在你肩上",
+"date": "2026-02-18",
+"from": "大狮子",
+"mood": "柔软保护",
+"tags": ["写给小鹿的四季💌"],
+"file": "2026-02-18-雨水.txt"
 }
 ]
